[package]
name = "evalsa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.11", features = ["ws"] }
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
zmq = "0.10.0"
evalsa-worker-proto = { version = "0.1.0", path = "../worker-proto" }
bincode = "1.3.3"
futures-util = "0.3.28"
rand = "0.8.5"
