[package]
name = "evalsa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
ciborium = "0.2.2"
lapin = "2.3.1"

[dependencies.evalsa-worker-proto]
version = "0.1.0"
path = "../worker-proto"
